correction des calculs de statuts en retard